chore: change auth page

--- a/apps/helpdesk-web/lang/ru/ru.json
+++ b/apps/helpdesk-web/lang/ru/ru.json
@@ -721,8 +721,8 @@
   "component.TicketWarningModal.Entity.property": "домов",
   "component.TicketWarningModal.Entity.status": "статусов",
   "component.TicketWarningModal.Title": "Выбрано больше {ticketFilterRestriction} {selectedEntity}",
-  "component.authPoster.description": "Онлайн-платформа для управляющих компаний, ТСН, ТСЖ, РСО",
-  "component.authPoster.title": "Сокращайте расходы, улучшайте процессы и отношения с жителями",
+  "component.authPoster.description": "Онлайн-платформа для служб поддержки, IT-отделов и сервисных центров",
+  "component.authPoster.title": "Сокращайте расходы, ускоряйте решение задач и повышайте удовлетворенность пользователей",
   "component.outdatedLinkPoster.description": "Отправили вам письмо для повторного подтверждения. Перейдите в почту, а затем — по ссылке в письме.",
   "component.outdatedLinkPoster.title": "Похоже, ссылка устарела",
   "component.statscard.ExtraTitle": "Подробнее",
